--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@
 
 }
 #page-wrap-inside{padding: 3rem;}
-
+html,body{margin: 0;padding: 0;}
 body {
-    margin: 0;
     overflow-x: hidden;
     background: linear-gradient(270deg,rgb(27 20 41),rgb(20 15 35));
 }
