--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
     overflow-x: hidden;
     background: linear-gradient(270deg,rgb(27 20 41),rgb(20 15 35));
 }
+.logo{margin-bottom: -40px;}
 #z-text-me{display: block;color: #63FF6A;font-family: 'sofia', cursive;letter-spacing: 1.2px;}
 header{padding: 3rem 0 5rem;text-align: center;}
-header::before{content: '{';position: absolute; font-size: 100px; margin-bottom: -100px; margin-left: -2.5em;}header::after{content: '}'; position: absolute; font-size: 100px; margin-top: -100px; margin-left: 2em;}header::before,header::after{color: #90a4ae;}
-    header nav a {
+   header nav a {
         font-family: inkwell sans a,inkwell sans b;
         text-decoration-skip: ink;
         text-decoration: underline;
