--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header{padding: 3rem 0 5rem;text-align: center;}
         position: absolute;
         z-index: -500;
         background-image: url('https://www.dl.dropboxusercontent.com/s/5beukq1zg37jlr7/airbus.png');
-        background-repeat: repeat-x;
+        background-repeat: none;
         width: 200px;
         height: 70px;
         -webkit-animation: movingplane 15s linear infinite;
