--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header .header-title>span{font-style:italic;font-size:1.5rem;display:block;text-
 header nav a:nth-child(1n+0) { color: #f06292; } header nav a:nth-child(2n+0) { color: #80cbc4; } header nav a:nth-child(3n+0) { color: #9575cd; } header nav a:nth-child(4n+0) { color: #90a4ae; }header nav a:nth-child(5n+0) { color: #d4e157; }
 /*-header part ends-*/
 
-#blogroll{border: 4px solid #1b1429;padding: 20px;border-radius: 15px;margin:10px auto}
+#blogroll{border: 4px solid #90909017;padding: 20px;border-radius: 15px;margin:10px auto}
 #blogroll .inside .wrap-title{display:block;font-size:24px;padding-bottom:3px;font-weight:500;animation:Color 4s linear infinite;-webkit-animation:Color 4s ease-in-out infinite;-webkit-text-decoration:underline wavy #fc6e51;text-decoration:underline wavy #fc6e51}
 @keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}@-moz-keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}@-webkit-keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}
 #blogroll .inside a{padding: 3px 0px;display: inline-block;font-family: 'Delius Swash Caps', cursive;text-decoration: none;font-size: 16px;}
@@ -28,7 +28,7 @@ header nav a:nth-child(1n+0) { color: #f06292; } header nav a:nth-child(2n+0) { 
 #blogroll .inside a:nth-child(1n+0) { color: #f44336; } #blogroll .inside a:nth-child(2n+0) { color: #4caf50; } #blogroll .inside a:nth-child(3n+0) { color: #ff9800; } #blogroll .inside a:nth-child(4n+0) { color: #2196f3; }
 
 /*card starts*/
-.card{box-shadow: 0 -2px 10px rgba(0, 0, 0, 1);padding: 10px;max-width: 720px;margin:10px auto;border-radius:10px;}
+.card{box-shadow:4px 4px 4px rgb(255 255 255 / 8%),-4px -4px 4px rgb(0 0 0 / 56%),0 0 0 rgb(255 255 255 / 8%) inset,0 0 0 rgb(0 0 0 / 56%) inset;border:1px solid rgba(0,0,0,.08);padding:10px 15px;max-width:720px;margin:10px auto;border-radius:10px}
 .card .heading{color:#717171;font-weight:400;letter-spacing:1px;text-shadow:1px 1px #fff;font-size:1.4em}
 .card .sub-heading{color:#5a5a5a}
 /*card ends*/
