--- a/style.css
+++ b/style.css
@@ -1,58 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia');
-@import url('https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&display=swap');
-*{box-sizing:border-box}
-body{margin:0;padding:0;font-family:sans-serif;background:linear-gradient(270deg,rgb(27 20 41),rgb(20 15 35));}
-/*custom webkit-scrollbar starts*/
-::-webkit-scrollbar-track{box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#f5f5f5}
-::-webkit-scrollbar{width:10px;background-color:#f5f5f5}
-::-webkit-scrollbar-thumb{background-color:#f90;background-image:-webkit-linear-gradient(90deg,rgba(255,255,255,.2) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.2) 50%,rgba(255,255,255,.2) 75%,transparent 75%,transparent)}
-/*custom webkit-scrollbar ends*/
-/*header part starts*/
-header{padding:3rem 0 5rem;text-align:center}
-header .logo-img{margin-bottom: -40px;}
-header .title-link{display:inline-block;color:#63ff6a;font-family:sofia,cursive;letter-spacing:1.2px}
-header span.subtitle{color:#78909c;margin-bottom:10px;font-size:13px;font-style:italic}
-header h1{margin-bottom: 2px;}
-header nav{margin-top: 15px;}
-header nav a{font-family: sans-serif;text-decoration:underline;display:inline-block;padding:0 .3rem .1rem;font-size:1.2rem;line-height:1;cursor: no-drop;}
-header .header-title>span{font-style:italic;font-size:1.5rem;display:block;text-transform:none}
-header nav a:nth-child(1n+0) { color: #f06292; } header nav a:nth-child(2n+0) { color: #80cbc4; } header nav a:nth-child(3n+0) { color: #9575cd; } header nav a:nth-child(4n+0) { color: #90a4ae; }header nav a:nth-child(5n+0) { color: #d4e157; }
-/*-header part ends-*/
+*{margin:0;padding:0;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;box-sizing: border-box;}
 
-#blogroll{border: 4px solid #90909017;padding: 20px;border-radius: 15px;margin:10px auto}
-#blogroll .inside .wrap-title{display:block;font-size:24px;padding-bottom:3px;font-weight:500;animation:Color 4s linear infinite;-webkit-animation:Color 4s ease-in-out infinite;-webkit-text-decoration:underline wavy #fc6e51;text-decoration:underline wavy #fc6e51}
-@keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}@-moz-keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}@-webkit-keyframes Color{0%{color:#a0d468}20%{color:#4fc1e9}40%{color:#ffce54}60%{color:#fc6e51}80%{color:#ed5565}100%{color:#ac92ec}}
-#blogroll .inside a{padding: 3px 0px;display: inline;line-height:1.6em;font-family: 'Delius Swash Caps', cursive;text-decoration: none;font-size: 16px;}
-#blogroll .inside a::after{content: '•';padding: 0px 5px;color: grey;}
-#blogroll .inside a:last-child::after{display: none}
-#blogroll .inside a:nth-child(1n+0) { color: #f44336; } #blogroll .inside a:nth-child(2n+0) { color: #4caf50; } #blogroll .inside a:nth-child(3n+0) { color: #ff9800; } #blogroll .inside a:nth-child(4n+0) { color: #2196f3; }
+.card {
+    background: white;
+    box-shadow: 0 0 4px 0 #00000040;
+    padding:20px;
+    margin: 20px 20px;
+}
 
-/*card starts*/
-.card{box-shadow:4px 4px 4px rgb(255 255 255 / 8%),-4px -4px 4px rgb(0 0 0 / 56%),0 0 0 rgb(255 255 255 / 8%) inset,0 0 0 rgb(0 0 0 / 56%) inset;border:1px solid rgba(0,0,0,.08);padding:10px 15px;max-width:720px;margin:10px auto;border-radius:10px}
-.card .heading{color:#717171;font-weight:400;letter-spacing:1px;text-shadow:1px 1px #fff;font-size:1.4em}
-.card .sub-heading{color:#5a5a5a;font-size: 13px;}
-/*card ends*/
-/*techstack starts*/
-.tech-stack img{vertical-align: middle;}
-.tech-stack a{color: #9e9e9e!important;display: inline-block!important; pointer-events: none;font-family: sans-serif!important;}
-/*techstack ends*/
-/*project-stack starts*/
-.project-stack ul{margin: 0;padding: 0;}
-.project-stack ul li{list-style: none;color: #90a4ae; }
-.project-stack ul li span{font-weight: 600;}
-.project-stack ul li a{color:#ffeb3b!important;background:#607d8b;font-family:sans-serif!important;padding:0 7px!important}
-/*project-stack ends*/
-/*preloader starts*/
-.preloader{display:flex;justify-content:center;align-items:center;height:100vh;width:100%;background:linear-gradient(270deg,rgb(27 20 41),rgb(20 15 35));position:fixed;top:0;left:0;z-index:9999;transition:opacity .3s linear}
-/*preloader ends*/
+@media only screen and (min-width:1200px){
+    .container{
+        max-width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 
-/*footer starts*/
-.footer{padding: 15px 0;max-width: 720px;margin: auto;}
-.footer .copyright span{color:#90a4ae;font-family:sans-serif;text-align:center;display:block;font-size:15px}
-.footer .social-icons ul{padding:0;margin:0;display:block;text-align:center}
-.footer .social-icons ul li{list-style:none;display:inline;color:#90a4ae;margin:0 3px;font-size:16px}
-#footer{box-shadow:inset 0 -150px 200px -100px #000;padding:10rem 1rem;position:sticky;bottom:0;left:0;width:100%}
-#footer .credit{text-align: center;}
-/*footer ends*/
-
-
+.header{
+    text-align: center;
+    font-weight: 600;
+    font-size: 30px;
+    text-transform: uppercase;
+}
+.content{
+    color:rgb(255, 56, 56);
+    font-weight: 500;
+    text-align: center;
+    font-size: 18px;
+}
